Fase 1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkCorcheteCierra
    TkShift
    TkTab
    TkFalse
    TkPunto
    TkConjuncion
    TkBool
    TkOtherwise
    TkComilla
    TkOf
    TkFor
    TkParCierra
    TkErrorSol
    TkSalto
    TkCaracterError
    TkCarError
    TkCorcheteAbre
    TkFrom
    TkInt
    TkAsignacion
    TkCaracter
    TkMenorIgual
    TkNot
    TkVar
    TkCarEspecial
    TkWhile
    TkTo
    TkBarra
    TkWith
    TkArray
    TkConcatenacion
    TkRead
    TkLlaveCierra
    TkDesigual
    TkAnteriorCar
    TkTrue
    TkParAbre
    TkDisyuncion
    TkStep
    TkSiguienteCar
    TkPrint
    TkPuntoYComa
    TkIgual
    TkDosPuntos
    TkValorAscii
    TkLlaveAbre
    TkMayorIgual
    TkComa
    TkError

Grammar

Rule 0     S' -> expresion
Rule 1     expresion -> TkBegin expresion TkEnd
Rule 2     expresion -> TkIf condicion TkHacer cuerpo TkEnd
Rule 3     cuerpo -> expresion cuerpo
Rule 4     cuerpo -> expresion
Rule 5     expresion -> expresion TkResta expresion
Rule 6     expresion -> expresion TkSuma expresion
Rule 7     expresion -> expresion TkDiv expresion
Rule 8     expresion -> expresion TkMult expresion
Rule 9     expresion -> expresion TkMod expresion
Rule 10    condicion -> expresion TkMenor expresion
Rule 11    condicion -> expresion TkMayor expresion
Rule 12    expresion -> TkNum
Rule 13    expresion -> TkId

Terminals, with rules where they appear

TkAnteriorCar        : 
TkArray              : 
TkAsignacion         : 
TkBarra              : 
TkBegin              : 1
TkBool               : 
TkCarError           : 
TkCarEspecial        : 
TkCaracter           : 
TkCaracterError      : 
TkComa               : 
TkComilla            : 
TkConcatenacion      : 
TkConjuncion         : 
TkCorcheteAbre       : 
TkCorcheteCierra     : 
TkDesigual           : 
TkDisyuncion         : 
TkDiv                : 7
TkDosPuntos          : 
TkEnd                : 1 2
TkError              : 
TkErrorSol           : 
TkFalse              : 
TkFor                : 
TkFrom               : 
TkHacer              : 2
TkId                 : 13
TkIf                 : 2
TkIgual              : 
TkInt                : 
TkLlaveAbre          : 
TkLlaveCierra        : 
TkMayor              : 11
TkMayorIgual         : 
TkMenor              : 10
TkMenorIgual         : 
TkMod                : 9
TkMult               : 8
TkNot                : 
TkNum                : 12
TkOf                 : 
TkOtherwise          : 
TkParAbre            : 
TkParCierra          : 
TkPrint              : 
TkPunto              : 
TkPuntoYComa         : 
TkRead               : 
TkResta              : 5
TkSalto              : 
TkShift              : 
TkSiguienteCar       : 
TkStep               : 
TkSuma               : 6
TkTab                : 
TkTo                 : 
TkTrue               : 
TkValorAscii         : 
TkVar                : 
TkWhile              : 
TkWith               : 
error                : 

Nonterminals, with rules where they appear

condicion            : 2
cuerpo               : 2 3
expresion            : 1 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 0

Parsing method: LALR

state 0

    (0) S' -> . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 1

state 1

    (0) S' -> expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8


state 2

    (13) expresion -> TkId .

    TkMenor         reduce using rule 13 (expresion -> TkId .)
    TkMayor         reduce using rule 13 (expresion -> TkId .)
    TkResta         reduce using rule 13 (expresion -> TkId .)
    TkSuma          reduce using rule 13 (expresion -> TkId .)
    TkDiv           reduce using rule 13 (expresion -> TkId .)
    TkMult          reduce using rule 13 (expresion -> TkId .)
    TkMod           reduce using rule 13 (expresion -> TkId .)
    TkBegin         reduce using rule 13 (expresion -> TkId .)
    TkIf            reduce using rule 13 (expresion -> TkId .)
    TkNum           reduce using rule 13 (expresion -> TkId .)
    TkId            reduce using rule 13 (expresion -> TkId .)
    TkEnd           reduce using rule 13 (expresion -> TkId .)
    $end            reduce using rule 13 (expresion -> TkId .)
    TkHacer         reduce using rule 13 (expresion -> TkId .)


state 3

    (12) expresion -> TkNum .

    TkMenor         reduce using rule 12 (expresion -> TkNum .)
    TkMayor         reduce using rule 12 (expresion -> TkNum .)
    TkResta         reduce using rule 12 (expresion -> TkNum .)
    TkSuma          reduce using rule 12 (expresion -> TkNum .)
    TkDiv           reduce using rule 12 (expresion -> TkNum .)
    TkMult          reduce using rule 12 (expresion -> TkNum .)
    TkMod           reduce using rule 12 (expresion -> TkNum .)
    TkBegin         reduce using rule 12 (expresion -> TkNum .)
    TkIf            reduce using rule 12 (expresion -> TkNum .)
    TkNum           reduce using rule 12 (expresion -> TkNum .)
    TkId            reduce using rule 12 (expresion -> TkNum .)
    TkEnd           reduce using rule 12 (expresion -> TkNum .)
    $end            reduce using rule 12 (expresion -> TkNum .)
    TkHacer         reduce using rule 12 (expresion -> TkNum .)


state 4

    (1) expresion -> TkBegin . expresion TkEnd
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 11

state 5

    (2) expresion -> TkIf . condicion TkHacer cuerpo TkEnd
    (10) condicion -> . expresion TkMenor expresion
    (11) condicion -> . expresion TkMayor expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    condicion                      shift and go to state 12
    expresion                      shift and go to state 13

state 6

    (5) expresion -> expresion TkResta . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 14

state 7

    (6) expresion -> expresion TkSuma . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 15

state 8

    (9) expresion -> expresion TkMod . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 16

state 9

    (7) expresion -> expresion TkDiv . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 17

state 10

    (8) expresion -> expresion TkMult . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 18

state 11

    (1) expresion -> TkBegin expresion . TkEnd
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

    TkEnd           shift and go to state 19
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8


state 12

    (2) expresion -> TkIf condicion . TkHacer cuerpo TkEnd

    TkHacer         shift and go to state 20


state 13

    (10) condicion -> expresion . TkMenor expresion
    (11) condicion -> expresion . TkMayor expresion
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

    TkMenor         shift and go to state 21
    TkMayor         shift and go to state 22
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8


state 14

    (5) expresion -> expresion TkResta expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

  ! shift/reduce conflict for TkResta resolved as shift
  ! shift/reduce conflict for TkSuma resolved as shift
  ! shift/reduce conflict for TkDiv resolved as shift
  ! shift/reduce conflict for TkMult resolved as shift
  ! shift/reduce conflict for TkMod resolved as shift
    TkMenor         reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkMayor         reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkBegin         reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkIf            reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkNum           reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkId            reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkEnd           reduce using rule 5 (expresion -> expresion TkResta expresion .)
    $end            reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkHacer         reduce using rule 5 (expresion -> expresion TkResta expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8

  ! TkResta         [ reduce using rule 5 (expresion -> expresion TkResta expresion .) ]
  ! TkSuma          [ reduce using rule 5 (expresion -> expresion TkResta expresion .) ]
  ! TkDiv           [ reduce using rule 5 (expresion -> expresion TkResta expresion .) ]
  ! TkMult          [ reduce using rule 5 (expresion -> expresion TkResta expresion .) ]
  ! TkMod           [ reduce using rule 5 (expresion -> expresion TkResta expresion .) ]


state 15

    (6) expresion -> expresion TkSuma expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

  ! shift/reduce conflict for TkResta resolved as shift
  ! shift/reduce conflict for TkSuma resolved as shift
  ! shift/reduce conflict for TkDiv resolved as shift
  ! shift/reduce conflict for TkMult resolved as shift
  ! shift/reduce conflict for TkMod resolved as shift
    TkMenor         reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkMayor         reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkBegin         reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkIf            reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkNum           reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkId            reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkEnd           reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    $end            reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkHacer         reduce using rule 6 (expresion -> expresion TkSuma expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8

  ! TkResta         [ reduce using rule 6 (expresion -> expresion TkSuma expresion .) ]
  ! TkSuma          [ reduce using rule 6 (expresion -> expresion TkSuma expresion .) ]
  ! TkDiv           [ reduce using rule 6 (expresion -> expresion TkSuma expresion .) ]
  ! TkMult          [ reduce using rule 6 (expresion -> expresion TkSuma expresion .) ]
  ! TkMod           [ reduce using rule 6 (expresion -> expresion TkSuma expresion .) ]


state 16

    (9) expresion -> expresion TkMod expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

  ! shift/reduce conflict for TkResta resolved as shift
  ! shift/reduce conflict for TkSuma resolved as shift
  ! shift/reduce conflict for TkDiv resolved as shift
  ! shift/reduce conflict for TkMult resolved as shift
  ! shift/reduce conflict for TkMod resolved as shift
    TkMenor         reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkMayor         reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkBegin         reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkIf            reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkNum           reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkId            reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkEnd           reduce using rule 9 (expresion -> expresion TkMod expresion .)
    $end            reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkHacer         reduce using rule 9 (expresion -> expresion TkMod expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8

  ! TkResta         [ reduce using rule 9 (expresion -> expresion TkMod expresion .) ]
  ! TkSuma          [ reduce using rule 9 (expresion -> expresion TkMod expresion .) ]
  ! TkDiv           [ reduce using rule 9 (expresion -> expresion TkMod expresion .) ]
  ! TkMult          [ reduce using rule 9 (expresion -> expresion TkMod expresion .) ]
  ! TkMod           [ reduce using rule 9 (expresion -> expresion TkMod expresion .) ]


state 17

    (7) expresion -> expresion TkDiv expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

  ! shift/reduce conflict for TkResta resolved as shift
  ! shift/reduce conflict for TkSuma resolved as shift
  ! shift/reduce conflict for TkDiv resolved as shift
  ! shift/reduce conflict for TkMult resolved as shift
  ! shift/reduce conflict for TkMod resolved as shift
    TkMenor         reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkMayor         reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkBegin         reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkIf            reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkNum           reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkId            reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkEnd           reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    $end            reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkHacer         reduce using rule 7 (expresion -> expresion TkDiv expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8

  ! TkResta         [ reduce using rule 7 (expresion -> expresion TkDiv expresion .) ]
  ! TkSuma          [ reduce using rule 7 (expresion -> expresion TkDiv expresion .) ]
  ! TkDiv           [ reduce using rule 7 (expresion -> expresion TkDiv expresion .) ]
  ! TkMult          [ reduce using rule 7 (expresion -> expresion TkDiv expresion .) ]
  ! TkMod           [ reduce using rule 7 (expresion -> expresion TkDiv expresion .) ]


state 18

    (8) expresion -> expresion TkMult expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

  ! shift/reduce conflict for TkResta resolved as shift
  ! shift/reduce conflict for TkSuma resolved as shift
  ! shift/reduce conflict for TkDiv resolved as shift
  ! shift/reduce conflict for TkMult resolved as shift
  ! shift/reduce conflict for TkMod resolved as shift
    TkMenor         reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkMayor         reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkBegin         reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkIf            reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkNum           reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkId            reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkEnd           reduce using rule 8 (expresion -> expresion TkMult expresion .)
    $end            reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkHacer         reduce using rule 8 (expresion -> expresion TkMult expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8

  ! TkResta         [ reduce using rule 8 (expresion -> expresion TkMult expresion .) ]
  ! TkSuma          [ reduce using rule 8 (expresion -> expresion TkMult expresion .) ]
  ! TkDiv           [ reduce using rule 8 (expresion -> expresion TkMult expresion .) ]
  ! TkMult          [ reduce using rule 8 (expresion -> expresion TkMult expresion .) ]
  ! TkMod           [ reduce using rule 8 (expresion -> expresion TkMult expresion .) ]


state 19

    (1) expresion -> TkBegin expresion TkEnd .

    TkMenor         reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkMayor         reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkResta         reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkSuma          reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkDiv           reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkMult          reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkMod           reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkBegin         reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkIf            reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkNum           reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkId            reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkEnd           reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    $end            reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)
    TkHacer         reduce using rule 1 (expresion -> TkBegin expresion TkEnd .)


state 20

    (2) expresion -> TkIf condicion TkHacer . cuerpo TkEnd
    (3) cuerpo -> . expresion cuerpo
    (4) cuerpo -> . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    cuerpo                         shift and go to state 24
    expresion                      shift and go to state 23

state 21

    (10) condicion -> expresion TkMenor . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 25

state 22

    (11) condicion -> expresion TkMayor . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    expresion                      shift and go to state 26

state 23

    (3) cuerpo -> expresion . cuerpo
    (4) cuerpo -> expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion
    (3) cuerpo -> . expresion cuerpo
    (4) cuerpo -> . expresion
    (1) expresion -> . TkBegin expresion TkEnd
    (2) expresion -> . TkIf condicion TkHacer cuerpo TkEnd
    (5) expresion -> . expresion TkResta expresion
    (6) expresion -> . expresion TkSuma expresion
    (7) expresion -> . expresion TkDiv expresion
    (8) expresion -> . expresion TkMult expresion
    (9) expresion -> . expresion TkMod expresion
    (12) expresion -> . TkNum
    (13) expresion -> . TkId

    TkEnd           reduce using rule 4 (cuerpo -> expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8
    TkBegin         shift and go to state 4
    TkIf            shift and go to state 5
    TkNum           shift and go to state 3
    TkId            shift and go to state 2

    cuerpo                         shift and go to state 27
    expresion                      shift and go to state 23

state 24

    (2) expresion -> TkIf condicion TkHacer cuerpo . TkEnd

    TkEnd           shift and go to state 28


state 25

    (10) condicion -> expresion TkMenor expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

    TkHacer         reduce using rule 10 (condicion -> expresion TkMenor expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8


state 26

    (11) condicion -> expresion TkMayor expresion .
    (5) expresion -> expresion . TkResta expresion
    (6) expresion -> expresion . TkSuma expresion
    (7) expresion -> expresion . TkDiv expresion
    (8) expresion -> expresion . TkMult expresion
    (9) expresion -> expresion . TkMod expresion

    TkHacer         reduce using rule 11 (condicion -> expresion TkMayor expresion .)
    TkResta         shift and go to state 6
    TkSuma          shift and go to state 7
    TkDiv           shift and go to state 9
    TkMult          shift and go to state 10
    TkMod           shift and go to state 8


state 27

    (3) cuerpo -> expresion cuerpo .

    TkEnd           reduce using rule 3 (cuerpo -> expresion cuerpo .)


state 28

    (2) expresion -> TkIf condicion TkHacer cuerpo TkEnd .

    TkMenor         reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkMayor         reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkResta         reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkSuma          reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkDiv           reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkMult          reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkMod           reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkBegin         reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkIf            reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkNum           reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkId            reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkEnd           reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    $end            reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)
    TkHacer         reduce using rule 2 (expresion -> TkIf condicion TkHacer cuerpo TkEnd .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for TkResta in state 14 resolved as shift
WARNING: shift/reduce conflict for TkSuma in state 14 resolved as shift
WARNING: shift/reduce conflict for TkDiv in state 14 resolved as shift
WARNING: shift/reduce conflict for TkMult in state 14 resolved as shift
WARNING: shift/reduce conflict for TkMod in state 14 resolved as shift
WARNING: shift/reduce conflict for TkResta in state 15 resolved as shift
WARNING: shift/reduce conflict for TkSuma in state 15 resolved as shift
WARNING: shift/reduce conflict for TkDiv in state 15 resolved as shift
WARNING: shift/reduce conflict for TkMult in state 15 resolved as shift
WARNING: shift/reduce conflict for TkMod in state 15 resolved as shift
WARNING: shift/reduce conflict for TkResta in state 16 resolved as shift
WARNING: shift/reduce conflict for TkSuma in state 16 resolved as shift
WARNING: shift/reduce conflict for TkDiv in state 16 resolved as shift
WARNING: shift/reduce conflict for TkMult in state 16 resolved as shift
WARNING: shift/reduce conflict for TkMod in state 16 resolved as shift
WARNING: shift/reduce conflict for TkResta in state 17 resolved as shift
WARNING: shift/reduce conflict for TkSuma in state 17 resolved as shift
WARNING: shift/reduce conflict for TkDiv in state 17 resolved as shift
WARNING: shift/reduce conflict for TkMult in state 17 resolved as shift
WARNING: shift/reduce conflict for TkMod in state 17 resolved as shift
WARNING: shift/reduce conflict for TkResta in state 18 resolved as shift
WARNING: shift/reduce conflict for TkSuma in state 18 resolved as shift
WARNING: shift/reduce conflict for TkDiv in state 18 resolved as shift
WARNING: shift/reduce conflict for TkMult in state 18 resolved as shift
WARNING: shift/reduce conflict for TkMod in state 18 resolved as shift
